--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(MotionBlow C CXX)
 find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS system program_options REQUIRED)
 include(gtest.cmake)
-
+include(RTIMULib.cmake)
 
 add_executable(motionBlow src/blow.cpp)
-target_include_directories(motionBlow PUBLIC include)
-target_link_libraries(motionBlow RTIMULib ${Boost_LIBRARIES})
+target_include_directories(motionBlow PUBLIC include ${RTIMULIB_INCLUDE_DIR})
+target_link_libraries(motionBlow ${RTIMULIB_LIBRARY} ${Boost_LIBRARIES})
 set_property(TARGET motionBlow PROPERTY CXX_STANDARD 14)
 
 add_executable(chat_client src/chat_client.cpp)
