--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Threads REQUIRED)
 find_package(Boost COMPONENTS system program_options REQUIRED)
 include(cmake/gtest.cmake)
 include(cmake/RTIMULib.cmake)
+include(cmake/clang-cxx-dev-tools.cmake)
 
 add_executable(motionBlow src/blow.cpp)
 target_include_directories(motionBlow PUBLIC include ${RTIMULIB_INCLUDE_DIR})
