Add eigen library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(Boost COMPONENTS system program_options REQUIRED)
 include(cmake/gtest.cmake)
 include(cmake/RTIMULib.cmake)
 include(cmake/clang-cxx-dev-tools.cmake)
+include(cmake/eigen.cmake)
 
 add_executable(motionBlow src/blow.cpp)
 target_include_directories(motionBlow PUBLIC include ${RTIMULIB_INCLUDE_DIR})
