Start writing netwok layer

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -30,15 +30,22 @@ target_include_directories(motionBlow PUBLIC include)
 target_link_libraries(motionBlow PUBLIC RTIMULib ${Boost_LIBRARIES} messages)
 target_compile_features(motionBlow PUBLIC cxx_std_20)
 
-add_executable(chat_client src/chat_client.cpp)
-target_include_directories(chat_client PUBLIC include)
-target_link_libraries(chat_client ${Boost_LIBRARIES} Threads::Threads)
-target_compile_features(chat_client PUBLIC cxx_std_20)
+add_executable(server src/server.cpp)
+target_compile_features(server PUBLIC cxx_std_20)
+target_link_libraries(server ${Boost_LIBRARIES} Threads::Threads)
 
-add_executable(chat_server src/chat_server.cpp)
-target_include_directories(chat_server PUBLIC include)
-target_link_libraries(chat_server ${Boost_LIBRARIES} Threads::Threads)
-target_compile_features(chat_server PUBLIC cxx_std_20)
+add_executable(client src/client.cpp)
+target_compile_features(client PUBLIC cxx_std_20)
+target_link_libraries(client ${Boost_LIBRARIES} Threads::Threads)
+# add_executable(chat_client src/chat_client.cpp)
+# target_include_directories(chat_client PUBLIC include)
+# target_link_libraries(chat_client ${Boost_LIBRARIES} Threads::Threads)
+# target_compile_features(chat_client PUBLIC cxx_std_20)
+
+# add_executable(chat_server src/chat_server.cpp)
+# target_include_directories(chat_server PUBLIC include)
+# target_link_libraries(chat_server ${Boost_LIBRARIES} Threads::Threads)
+# target_compile_features(chat_server PUBLIC cxx_std_20)
 
 add_executable(ec src/EigenCheck.cpp)
 target_include_directories(ec PUBLIC include)
