--- a/code/cut/CMakeLists.txt
+++ b/code/cut/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(cut src/Integrator.cpp)
 target_include_directories(cut PUBLIC include)
-target_link_libraries(cut PUBLIC Eigen3::Eigen motionBlow)
+target_link_libraries(cut PUBLIC Eigen3::Eigen aquisition)
 target_compile_features(cut PUBLIC cxx_std_20)
 
 add_executable(cutTests src/IntegratorTests.cpp)
